--- a/w08.md
+++ b/w08.md
@@ -4,42 +4,42 @@ permalink: /W08/
 
 # Top 10 List of Week 08
 
-1. [Deadlock](https://student.blog.dinus.ac.id/ganiarianto/2016/11/30/deadlock-pada-sistem-operasi/)<br>
-website ini menjelaskan tentang deadlock.
-Deadlock adalah keadaan dimana 2 atau lebih proses saling menunggu meminta resources untuk waktu yang tidak terbatas lamanya. 
+1. [CPU Scheduling](http://www2.cs.uregina.ca/~hamilton/courses/330/notes/scheduling/scheduling.html)<br>
+website ini menjelaskan tentang Scheduling.
+Scheduling adalah saat cpu menjadwalkan proses apa yang akan dijalankan pertama
+ 
+2. [Preemptive Scheduling](https://www.sciencedirect.com/topics/engineering/preemptive-scheduling)<br>
+website ini menjelaskan tentang Preemptive scheduling
+preemptive scheduling adalah algoritma scheduling yang mendahulukan proses dengan prioritas tertinggi
 
-2. [Race Condition](https://searchstorage.techtarget.com/definition/race-condition#)<br>
-website ini menjelaskan tentang Race Condition.
-Race Condition adalah situasi yang tidak diinginkan yang terjadi ketika perangkat atau sistem mencoba melakukan dua operas atau lebih pada waktu yang sama, tetapi karena sifat dari perangkat atau sistem tersebut, operasi tersebut harus dilakukan dalam urutan yang benar.
+3. [Non-Preemptive Scheduling](https://www.tutorialspoint.com/preemptive-and-non-preemptive-scheduling#)<br>
+website ini menjelaskan tentang Non-Preemptive Scheduling
+Non-preemptive scheduling menggunakan FIFO.
 
-3. [Critical Section](http://muhammadmiftahpratama.blogspot.com/p/criticalsection-adalah-segmen-kode-d.html#)<br>
-website ini menjelaskan tentang Critical Section.
-Critical Section adalah sebuah segmen kode dari sebuah proses yang mana sumber daya diakses bersamaan.
+4. [Round-Robin Scheduling](https://www.guru99.com/round-robin-scheduling-example.html)<br>
+website ini menjelaskan tentang Round-Robin scheduling.
+Round-Robin scheduling adalah algoritma scheduling yang menggunakan antrian siklik.
 
-4. [Semaphores](https://www.geeksforgeeks.org/semaphores-in-process-synchronization/)<br>
-website ini menjelaskan tentang Semaphores.
-Semaphore hanyalah variabel yang non-negatif dan dibagikan di antara utas. Variabel ini digunakan untuk menyelesaikan Critical Section problem.
+5. [SJF](https://www.guru99.com/shortest-job-first-sjf-scheduling.html#)<br>
+website ini menjelaskan tentang SJF atau Shortest Job First.
+SJF adalah algoritma scheduling yang memprioritaskan proses dengan waktu eksekusi yang paling cepat.
 
-5. [Mutual Exclusion](https://aristysaputri3.wordpress.com/sistem-operasi/mutual-exclusion/#)<br>
-website ini menjelaskan tentang Mutual Exclusion.
-Mutual Exclusion Merupakan kondisi dimana terdapat sumber daya yang tidak dapat dipakai bersama pada waktu yang bersamaan (misalnya printer, disk drive) maka terdapat jaminan hanya satu proses yang mengakses sumber daya pada satu interval tertentu.
+6. [Dispatcher](https://practice.geeksforgeeks.org/problems/what-is-the-dispatcher)<br>
+Website ini menjelaskan tentang Dispatcher
+Dispatcher merupakan modul yang memberikan kontrol CPU kepada proses yang dipilih melalui short term scheduler.
 
-6. [Peterson's Algorithm](https://www.geeksforgeeks.org/petersons-algorithm-in-process-synchronization/)<br>
-Website ini menjelaskan tentang Peterson's Algorithm.
-Algoritma Peterson digunakan untuk menyinkronkan dua proses. Ini menggunakan dua variabel, a bool array flag berukuran 2 dan int variable turn untuk mencapainya.
+7. [Priority Scheduling](https://www.guru99.com/priority-scheduling-program.html)<br>
+website ini menjelaskan tentang Priority Scheduling
+Priority scheduling merupakan scheduling proses yang menggunakan basis prioritas.
 
-7. [Spinlock](https://qastack.id/unix/5088/what-is-a-spinlock-in-linux)<br>
-website ini menjelaskan tentang Spinlock.
-Spin lock adalah cara untuk melindungi sumber daya bersama agar tidak dimodifikasi oleh dua atau lebih proses secara bersamaan. Proses pertama yang mencoba memodifikasi sumber daya "memperoleh" kunci dan melanjutkan perjalanannya, melakukan apa yang diperlukan dengan sumber daya. Setiap proses lain yang kemudian mencoba untuk mendapatkan kunci dihentikan; mereka dikatakan "berputar di tempat" menunggu kunci yang akan dirilis oleh proses pertama, demikian nama kunci berputar.
+8. [Two-State Process Model](https://www.tutorialspoint.com/operating_system/os_process_scheduling.htm)<br>
+Website ini menjelaskan tentang Two-State Process Model. 
+dua state yang terdapat pada two-state model merupakan running dan not running.
 
-8. [Dining Philosophers Problem](https://www.tutorialspoint.com/dining-philosophers-problem-dpp#)<br>
-Website ini menjelaskan tentang Dining Philosophers problem. 
-Dining Philosphers Problem menyatakan bahwa ada 5 filsuf yang berbagi meja bundar dan mereka makan dan berpikir secara bergantian. Ada semangkuk nasi untuk masing-masing filsuf dan 5 sumpit. Seorang filsuf membutuhkan sumpit kanan dan kirinya untuk dimakan.
+9. [Long-Term vs Medium-term vs Short-Term Scheduler](http://2009143-galihsterisma.blogspot.com/2011/11/perbedaan-long-tem-short-term-dan.html)<br>
+website ini menjelaskan tentang Perbedaan antara Long term, Medium term, dan Short Term Scheduler
+Medium term scheduler biasa disebut swapping.
 
-9. [Deadlock vs Starvation](https://www.geeksforgeeks.org/difference-between-deadlock-and-starvation-in-os/)<br>
-website ini menjelaskan tentang Difference between Deadlock and Starvation.
-pada deadlock semua process harus menunggu untuk yang lainnya selesai baru di eksekusi, sedangkan pada starvation High priority process tetap tereksekusi sedangkan proses yang mempunyai priority rendah di block.
-
-10. [Mutex Lock for Linux Thread Synchronization](https://www.geeksforgeeks.org/mutex-lock-for-linux-thread-synchronization/)<br>
-website ini menjelaskan tentang Mutex lock for Linux Thread Synchronization.
-Thread Synchronization didefinisikan sebagai mekanisme yang memastikan bahwa dua atau lebih proses atau utas yang bersamaan tidak secara bersamaan menjalankan beberapa segmen program tertentu yang dikenal sebagai bagian kritis.
+10. [Basic State Of Process](https://www.tutorialspoint.com/what-are-the-different-states-of-a-process)<br>
+website ini menjelaskan tentang Beberapa state dari sebuah proses.
+State yang disebut dalam website ini adalah New, Ready, Ready Suspended, Running, Blocked, Blocked Suspended, dan Terminated.
